--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,10 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="NavajoWhite">#FFE9A9</color>
+    <color name="DarkGreen">#0B2C17</color>
+    <color name="Olive">#74842C</color>
+    <color name="MeatBrown">#DCC837</color>
+    <color name="ForestGreen">#104C20</color>
     <color name="black_overlay">#66000000</color>
 </resources>
