Add basics of the actual playing field activity
Started work on the screen visible while actually playing.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@ android:orientation="vertical"
 android:paddingTop="32dp"
 android:paddingLeft="32dp"
 android:paddingRight="32dp"
-    android:background="#104C20"
+    android:background="@color/ForestGreen"
 android:layout_width="match_parent"
 android:layout_height="match_parent">
 <Button
