--- a/app/src/main/res/layout/activity_play_menu.xml
+++ b/app/src/main/res/layout/activity_play_menu.xml
@@ -2,11 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#104C20"
+    android:background="@color/ForestGreen"
     tools:context="rotygames.regexgolf.PlayMenuActivity">
 
-    <!-- This FrameLayout insets its children based on system windows using
-         android:fitsSystemWindows. -->
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:paddingTop="32dp"
