--- a/app/src/main/res/drawable/splashscreen.xml
+++ b/app/src/main/res/drawable/splashscreen.xml
@@ -2,6 +2,16 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
 <item android:drawable="@color/ForestGreen"></item>
+<item
+    android:height="512dp"
+    android:width="512dp"
+    android:gravity="center"
+    >
+    <bitmap
+        android:src="@mipmap/ic_launcher"
+        android:dither="true"
 
+        ></bitmap>
+</item>
 
 </layer-list>
