--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,4 +43,14 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="HelpTextView" parent="android:Widget.TextView">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:textSize">24dp</item>
+        <item name="android:textColor">@color/OkkerYellow</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:onClick">onClickCollapsibleTextView</item>
+    </style>
+
 </resources>
