Create the base of matching checker system

--- a/app/src/main/res/layout/activity_playing_field.xml
+++ b/app/src/main/res/layout/activity_playing_field.xml
@@ -9,6 +9,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <EditText
+        android:id="@+id/regexContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/regex_goes_here"
