--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<rotygames.regexgolf.inputs.CheckerTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="0dp"
     android:textSize="15dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-</TextView>
+</rotygames.regexgolf.inputs.CheckerTextView>
