--- a/app/src/main/res/layout/activity_playing_field.xml
+++ b/app/src/main/res/layout/activity_playing_field.xml
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"
         android:hint="@string/regex_goes_here"
         android:textSize="28sp"
-        android:textColor="@color/MeatBrown" />
+        android:textColor="@color/MeatBrown"
+        android:inputType="textNoSuggestions"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="0dp"
