--- a/app/src/main/res/layout/activity_playing_field.xml
+++ b/app/src/main/res/layout/activity_playing_field.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/regex_goes_here"
+        android:inputType="textNoSuggestions"
         android:textSize="28sp"
         android:textColor="@color/MeatBrown" />
     <LinearLayout
