Fix the checking of regex matching

--- a/app/src/main/res/layout/activity_playing_field.xml
+++ b/app/src/main/res/layout/activity_playing_field.xml
@@ -40,11 +40,11 @@
             android:focusable="false"
             />
     </LinearLayout>
-    <Button
+    <rotygames.regexgolf.inputs.NextOrSkipButton
         android:id="@+id/buttonNextLevel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/next_level"
+        android:text="SKIP LEVEL"
         style="@style/MenuButton"
         />
 
