--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,5 +67,6 @@
         android:singleLine="true"
         android:textColor="@color/NavajoWhite"
         android:textSize="25sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:onClick="onClickQuote"/>
 </RelativeLayout>
