--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
 <rotygames.regexgolf.inputs.CheckerTextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="0dp"
+    android:padding="3dp"
     android:textSize="15dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-</rotygames.regexgolf.inputs.CheckerTextView>
+    android:layout_height="wrap_content"
+    android:id="@+id/word"/>
+
+</LinearLayout>
