--- a/app/src/main/res/layout/activity_playing_field.xml
+++ b/app/src/main/res/layout/activity_playing_field.xml
@@ -1,51 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/green_2"
     android:orientation="vertical"
-    android:paddingTop="16dp"
     android:paddingLeft="24dp"
     android:paddingRight="24dp"
-    android:background="@color/ForestGreen"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <EditText
-        android:id="@+id/regexContainer"
+    android:paddingTop="16dp">
+
+    <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/regex_goes_here"
-        android:textSize="28sp"
-        android:textColor="@color/MeatBrown"
-        android:inputType="textNoSuggestions"/>
-    <LinearLayout
+        android:background="@drawable/rounded_rect"
+        android:orientation="vertical"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp">
+
+        <!-- TODO If you remove background tag, unnecessary space will appear around EditText -->
+        <EditText
+            android:id="@+id/regexContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="0dp"
+            android:background="@android:color/transparent"
+            android:hint="@string/regex_goes_here"
+            android:inputType="textNoSuggestions"
+            android:textColor="@color/green_color_accent"
+            android:textSize="24sp" />
+    </android.support.v7.widget.LinearLayoutCompat>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginBottom="1dp"
+        android:layout_marginTop="1dp"
+        android:background="@color/green_6" />
+
+    <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:orientation="horizontal"
         android:layout_weight="1"
-        android:paddingBottom="16dp"
-        android:baselineAligned="false">
+        android:baselineAligned="false"
+        android:orientation="horizontal"
+        android:paddingBottom="16dp">
+
         <ListView
             android:id="@+id/leftColumn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:divider="@android:color/transparent"
-            android:focusable="false"
-            />
+            android:dividerHeight="2dp"
+            android:focusable="false" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="2dp"
+            android:layout_marginStart="2dp"
+            android:background="@color/green_6" />
+
         <ListView
             android:id="@+id/rightColumn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:divider="@android:color/transparent"
-            android:focusable="false"
-            />
-    </LinearLayout>
+            android:dividerHeight="2dp"
+            android:focusable="false" />
+    </android.support.v7.widget.LinearLayoutCompat>
+
     <rotygames.regexgolf.inputs.NextOrSkipButton
         android:id="@+id/buttonNextLevel"
+        style="@style/MenuButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="SKIP LEVEL"
-        style="@style/MenuButton"
-        />
+        android:text="SKIP LEVEL" />
 
-</LinearLayout>
+</android.support.v7.widget.LinearLayoutCompat>
