--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -2,13 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-<rotygames.regexgolf.inputs.CheckerTextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="3dp"
-    android:textSize="15dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/word"/>
-
+    android:orientation="vertical"
+    android:paddingStart="7dp"
+    android:paddingEnd="7dp"
+    android:paddingTop="1dp"
+    android:paddingBottom="1dp"
+    android:background="@drawable/rounded_rect">
+    <rotygames.regexgolf.inputs.CheckerTextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:textSize="15sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/word"/>
 </LinearLayout>
