--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<rotygames.regexgolf.inputs.CheckerTextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/word"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingStart="7dp"
-    android:paddingEnd="7dp"
-    android:paddingTop="1dp"
+    android:layout_height="wrap_content"
+    android:background="@drawable/rounded_rect"
     android:paddingBottom="1dp"
-    android:background="@drawable/rounded_rect">
-    <rotygames.regexgolf.inputs.CheckerTextView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:textSize="15sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/word"/>
-</LinearLayout>
+    android:paddingEnd="7dp"
+    android:paddingStart="7dp"
+    android:paddingTop="1dp"
+    android:textSize="15sp" />
